CMAKE_MINIMUM_REQUIRED( VERSION 3.3 )

PROJECT( ${BLOCKSETTLE_UI_LIBRARY_NAME} )

configure_file(TerminalVersion.h.in TerminalVersion.h)

FILE(GLOB SOURCES *.cpp)
FILE(GLOB HEADERS *.h)
FILE(GLOB UI_FILES *.ui )
FILE(GLOB RESOURCE_FILES *.qrc)

INCLUDE_DIRECTORIES( ${WALLET_LIB_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${CRYPTO_LIB_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${BS_NETWORK_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${COMMON_LIB_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${COMMON_UI_LIB_INCLUDE_DIR} )

qt5_add_resources( GENERATED_RESOURCES ${RESOURCE_FILES})
qt5_wrap_ui( GENERATED_UI ${UI_FILES} )

INCLUDE_DIRECTORIES( ${Qt5Gui_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${Qt5Widgets_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${Qt5Core_INCLUDE_DIRS})
INCLUDE_DIRECTORIES( ${Qt5Network_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${Qt5Qml_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${Qt5DBus_INCLUDE_DIRS} )

SET(GENERATED_PROTO_FILES
   ${BS_COMMUNICATION_PROTO_SOURCES}
   ${BS_COMMUNICATION_PROTO_HEADERS}
   ${NETTY_PROTO_SOURCES}
   ${NETTY_PROTO_HEADERS}
   ${BS_COMMON_ENUMS_PROTO_SOURCES}
   ${BS_COMMON_ENUMS_PROTO_HEADERS}
   ${BS_TERMINAL_API_PROTO_SOURCES}
   ${BS_TERMINAL_API_PROTO_HEADERS}
   ${MARKET_ENUMS_PROTO_HEADERS}
   )

INCLUDE_DIRECTORIES( ${BS_COMMUNICATION_INCLUDE_DIR} )

INCLUDE_DIRECTORIES( ${PATH_TO_GENERATED} )
INCLUDE_DIRECTORIES( ${NETTY_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${BS_COMMON_ENUMS_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${BS_TERMINAL_API_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${MARKET_ENUMS_INCLUDE_DIR} )

ADD_LIBRARY( ${BLOCKSETTLE_UI_LIBRARY_NAME}
   ${SOURCES}
   ${HEADERS}
   ${GENERATED_RESOURCES}
   ${GENERATED_UI}
   ${GENERATED_PROTO_FILES})

TARGET_LINK_LIBRARIES(${BLOCKSETTLE_UI_LIBRARY_NAME}
   ${OS_SPECIFIC_LIBS}
   ${COMMON_LIB_NAME}
   ${COMMON_UI_LIB_NAME}
   ${QRENCODE_LIB}
   ${PROTO_LIB}
   Qt5::Core
   Qt5::Widgets
   Qt5::Gui
   Qt5::Network
   Qt5::Qml
   )
