CMAKE_MINIMUM_REQUIRED( VERSION 3.3 )

PROJECT( ${BS_NETWORK_LIB_NAME} )

FILE(GLOB SOURCES *.cpp)
FILE(GLOB HEADERS *.h)


# for bdmenums.h include in ApplicationSettings.h ( ugly :( )
INCLUDE_DIRECTORIES( ${CRYPTO_LIB_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${WALLET_LIB_INCLUDE_DIR} )

INCLUDE_DIRECTORIES( ${PATH_TO_GENERATED})

INCLUDE_DIRECTORIES( ${Qt5Network_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${Qt5Core_INCLUDE_DIRS})

INCLUDE_DIRECTORIES( ${Qt5Core_INCLUDE_DIRS})

INCLUDE_DIRECTORIES( ${COMMON_LIB_INCLUDE_DIR} )

ADD_LIBRARY( ${BS_NETWORK_LIB_NAME} ${SOURCES} ${HEADERS})

TARGET_LINK_LIBRARIES(${BS_NETWORK_LIB_NAME}
   ${OS_SPECIFIC_LIBS}
   ${COMMON_LIB_NAME}
   ${LIBCP_LIB}
   ${ZMQ_LIB}
   ${CPP_WALLET_LIB_NAME} 
   ${BS_PROTO_LIB_NAME}
   ${CELER_PROTO_LIB_NAME}
   ${PROTO_LIB}
   Qt5::Core
   Qt5::Network
)
