# CMake 3.10 fixes automoc Q_NAMESPACE detection
CMAKE_MINIMUM_REQUIRED( VERSION 3.10 )

PROJECT( ${BS_NETWORK_LIB_NAME} )

FILE(GLOB SOURCES
   *.cpp
   Wallets/*.cpp
   ChatProtocol/*.cpp
   ChatProtocol/DataObjects/*.cpp
   ChatProtocol/RequestObjects/*.cpp
   ChatProtocol/ResponseObjects/*.cpp
   ChatClientTree/*.cpp
   Encryption/*.cpp
)

IF (DISABLE_CELER)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/AssetManager.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/AuthAddressManager.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/BaseCelerClient.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/BsProxy.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/BSMarketDataProvider.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CCFileManager.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CCPubConnection.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerCancelOrderSequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerCancelQuoteNotifSequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerCancelRFQSequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerClient.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerCreateFxOrderSequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerCreateOrderSequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerFindSubledgersForAccountSequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerGetAssignedAccountsListSequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerGetUserIdSequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerGetUserPropertySequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerLoadMDDefinitionsSequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerLoadUserInfoSequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerLoginSequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerMarketDataProvider.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerMessageMapper.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerPropertiesDefinitions.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerSetUserPropertySequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerSignTxSequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerSubmitQuoteNotifSequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerSubmitRFQSequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerSubscribeToMDSequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerCreateCCSecurityOnMDSequence.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CommonTypes.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/MarketDataProvider.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/QuoteProvider.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/SingleCelerConnectionListener.cpp)
   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/AuthSignManager.cpp)
ENDIF()

FILE(GLOB HEADERS
   *.h
   Wallets/*.h
   ChatProtocol/*.h
   ChatProtocol/DataObjects/*.h
   ChatProtocol/RequestObjects/*.h
   ChatProtocol/ResponseObjects/*.h
   ChatClientTree/*.h
   Encryption/*.cpp
)

IF (DISABLE_CELER)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/AssetManager.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/AuthAddressManager.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/BSMarketDataProvider.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CCFileManager.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CCPubConnection.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerCancelOrderSequence.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerCancelQuoteNotifSequence.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerCancelRFQSequence.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerClient.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerCreateFxOrderSequence.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerCreateOrderSequence.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerFindSubledgersForAccountSequence.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerGetAssignedAccountsListSequence.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerGetUserIdSequence.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerGetUserPropertySequence.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerLoadMDDefinitionsSequence.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerLoadUserInfoSequence.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerLoginSequence.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerMarketDataProvider.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerMessageMapper.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerPropertiesDefinitions.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerSetUserPropertySequence.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerSignTxSequence.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerSubmitQuoteNotifSequence.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerSubmitRFQSequence.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerSubscribeToMDSequence.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CommonTypes.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/MarketDataProvider.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/QuoteProvider.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/SingleCelerConnectionListener.h)
   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/AuthSignManager.h)
ENDIF()


# for bdmenums.h include in ApplicationSettings.h ( ugly :( )
INCLUDE_DIRECTORIES( ${CRYPTO_LIB_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${WALLET_LIB_INCLUDE_DIR} )

INCLUDE_DIRECTORIES( ${PATH_TO_GENERATED})

INCLUDE_DIRECTORIES( ${Qt5Network_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${Qt5Core_INCLUDE_DIRS})

INCLUDE_DIRECTORIES( ${Qt5Core_INCLUDE_DIRS})

INCLUDE_DIRECTORIES( ${COMMON_LIB_INCLUDE_DIR} )

INCLUDE_DIRECTORIES( ${BOTAN_INCLUDE_DIR} )

SET( SOURCES ${SOURCES} ${BLOCK_SETTLE_ROOT}/AuthAPI/utils/cpp/autheid_utils.cpp )

ADD_LIBRARY( ${BS_NETWORK_LIB_NAME} ${SOURCES} ${HEADERS})

TARGET_INCLUDE_DIRECTORIES(${BS_NETWORK_LIB_NAME} PRIVATE )

TARGET_LINK_LIBRARIES(${BS_NETWORK_LIB_NAME}
   ${OS_SPECIFIC_LIBS}
   ${COMMON_LIB_NAME}
   ${BOTAN_LIB}
   ${LIBCP_LIB}
   ${ZMQ_LIB}
   ${CPP_WALLET_LIB_NAME} 
   ${AUTH_PROTO_LIB_NAME}
   ${BS_PROTO_LIB_NAME}
   ${CELER_PROTO_LIB_NAME}
   ${PROTO_LIB}
   Qt5::Core
   Qt5::Network
   Qt5::Sql
)
