CMAKE_MINIMUM_REQUIRED( VERSION 3.3 )

PROJECT( ${COMMON_LIB_NAME} )

include (GenerateExportHeader)

set(COMMON_LIB_EXPORT_NAME ${COMMON_LIB_NAME}_EXPORT)
set(COMMON_LIB_STATIC_DEFINE ${COMMON_LIB_NAME}_BUILT_AS_STATIC)
set(COMMON_LIB_EXPORT_FILE_NAME ${COMMON_LIB_NAME}_export.h)

FILE(GLOB SOURCES *.cpp)
file(GLOB HEADERS *.h)

LIST(APPEND ${COMMON_LIB_NAME}
    ${COMMON_LIB_EXPORT_FILE_NAME}
)

IF(BSTERMINAL_SHARED_LIBS)
    ADD_LIBRARY( ${COMMON_LIB_NAME} SHARED ${SOURCES} ${HEADERS})
ELSE()
    ADD_LIBRARY( ${COMMON_LIB_NAME} ${SOURCES} ${HEADERS})
ENDIF()

GENERATE_EXPORT_HEADER( ${COMMON_LIB_NAME}
             BASE_NAME ${COMMON_LIB_NAME}
             EXPORT_MACRO_NAME ${COMMON_LIB_EXPORT_NAME}
             EXPORT_FILE_NAME ${COMMON_LIB_EXPORT_FILE_NAME}
             STATIC_DEFINE ${COMMON_LIB_STATIC_DEFINE}
)

target_include_directories(
    ${COMMON_LIB_NAME} PUBLIC
    "$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>"
    "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>"
)

TARGET_LINK_LIBRARIES(${COMMON_LIB_NAME}
    Qt5::Core
    )
