#
#
# ***********************************************************************************
# * Copyright (C) 2020 - 2023, BlockSettle AB
# * Distributed under the GNU Affero General Public License (AGPL v3)
# * See LICENSE or http://www.gnu.org/licenses/agpl.html
# *
# **********************************************************************************
#
#

INCLUDE_DIRECTORIES(${BS_HW_LIB_INCLUDE_DIR})

ADD_SUBDIRECTORY(QtWidgets)
ADD_SUBDIRECTORY(QtQuick)
